[package]
name = "blink-cam"
version = "0.1.0"
authors = ["tstellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"


[dependencies]
rayon = "1.1.0"
imageproc = "0.18.0"
image = "0.21.1"


[dependencies.eventcam_converter]
path = "../eventcam-converter"

[dependencies.arcstar]
path = "../arcstar"
#git = "https://github.com/tstellanova/arcstar"

[dependencies.eventcam-tracker]
path = "../eventcam-tracker"
#git = "https://github.com/tstellanova/eventcam-tracker"
